# ISL

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  pch.hpp  std.cmake  vcpkg.json
.github/workflows/: code_style_check.yml  compilation_and_testing.yml
benchmark/: CMakeLists.txt  block_allocator.cpp  fixed_size_allocator.cpp  pool.cpp  smart_ptr.cpp  thread_pool.cpp
catch/: CMakeLists.txt
catch/isl/: bit.cpp  block_allocator.cpp  const_string.cpp  dynamic_forward_list.cpp  fixed_size_allocator.cpp  flat_map.cpp  flat_set.cpp  float16.cpp  gss.cpp  is_same_to_any.cpp  join.cpp  lazy.cpp  lifetime.cpp  object_owner.cpp  small_function.cpp  small_vector.cpp  unique_any.cpp  utf8.cpp  utf_set.cpp  weak_object_owner.cpp  weak_stack.cpp
catch/isl/coroutine/: fibonacci_generator.cpp  task.cpp  yield_from_empty_generator.cpp  yield_string.cpp
catch/isl/detail/: as.cpp  is.cpp  test_structures.hpp  traits.cpp
catch/isl/flatmap/: contains.cpp  indexing.cpp  overflow.cpp
catch/isl/io/: write.cpp
catch/isl/linalg/: spline.cpp
catch/isl/raii/: raii.cpp
catch/isl/string_view/: comparison.cpp  construction.cpp  contains.cpp  find.cpp  format.cpp  iteration.cpp  open_close_find.cpp  rfind.cpp  strip.cpp  substr.cpp  without_last_character.cpp
catch/isl/thread/: lazy_list.cpp  persistent_storage.cpp  pool_creation.cpp
catch/isl/thread/lockfree/: spsc_pipe.cpp  stack.cpp
cmake/: ClangStd.cmake  CompilerOptions.cmake  ImportCatch2.cmake  InterproceduralOptimization.cmake  Libraries.cmake  ProjectOptions.cmake
include/isl/: CMakeLists.txt  bit.hpp  block_allocator.hpp  const_string.hpp  const_string.ixx  crtp.hpp  dot_repr.hpp  dynamic_forward_list.hpp  fixed_size_allocator.hpp  flat_map.hpp  flat_set.hpp  flatmap.hpp  flatmap.ixx  float16.hpp  generator.hpp  generator.ixx  gss.hpp  id_generator.hpp  io.hpp  isl.hpp  isl.ixx  iterator.hpp  iterator.ixx  join.hpp  join.ixx  lazy.hpp  lazy.ixx  lgss.hpp  lifetime.cxxm  lifetime.hpp  lifetime.ixx  memory.hpp  memory.ixx  pool_allocator.hpp  raii.hpp  raii.ixx  range.hpp  range.ixx  shared_lib_loader.hpp  small_function.hpp  (+11 more)
include/isl/algorithms/: join.ixx  module.ixx
include/isl/character/: module.ixx  utf8.ixx
include/isl/collection/: const_string.ixx  flatmap.ixx  lazy.ixx  module.ixx  pair.ixx  range.ixx  string_view.ixx  utf_set.ixx
include/isl/core/: as.ixx  concepts.ixx  container_guard.ixx  defines.hpp  iterator.ixx  memory.ixx  module.ixx  types.ixx
include/isl/coroutine/: defines.hpp  generator.hpp  generator.ixx  module.ixx  task.hpp
include/isl/detail/: as.hpp  as.ixx  concepts.hpp  concepts.ixx  config.hpp  container_guard.hpp  container_guard.ixx  defines.hpp  hash.hpp  is.hpp  object_owner.hpp  object_reference.hpp  pair.hpp  pair.ixx  types.hpp  types.ixx
include/isl/detail/debug/: debug.hpp
include/isl/io/: io.ixx
include/isl/linalg/: lagrange.hpp  linspace.hpp  spline.hpp  thomas.hpp
include/isl/safety/: lifetime.cxxm  lifetime.ixx  module.ixx  raii.ixx
include/isl/thread/: async_task.hpp  id_generator.hpp  lazy_list.hpp  persistent_storage.hpp  pool.hpp  scope.hpp  spin_lock.hpp
include/isl/thread/lockfree/: spsc_pipe.hpp  stack.hpp
src/: CMakeLists.txt
src/isl/: dot_repr.cpp  io.cpp  lifetime.cpp  string_view.cpp  utf_set.cpp
src/isl/threads/: pool.cpp  stack.cpp
